syntax = "proto3";

package proto;

option go_package = "github.com/NovikovAndrew/infra-fusion/user-filter/pb";

message Filter {
  uint64 filterID = 1;
}